[package]
name = "darwintiler_common"
version = "0.1.0"
authors = ["veryjos <jos@veryjos.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.2"
config_struct = { version = "0.5.0", features = ["toml-parsing"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
pest = "2.1"
pest_derive = "2.1"
